routing, guards, authentication, evironments and login setup

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
 <h1>
   {{title}}
 </h1>
+<router-outlet></router-outlet>
+
+<button (click)="loginService.logout()" [hidden]="!loginService.isLoggedIn()" class="btn btn-primary">Log out</button>
